--- a/assets/styles/scss/abstract/_variables.scss
+++ b/assets/styles/scss/abstract/_variables.scss
@@ -1,5 +1,19 @@
+/*
+:root {
+  --main-color: #393E46;
+  --main-bg-color: #FAFAFA;
+}
+
+:root.dark {
+  --main-color: #FAFAFA;
+  --main-bg-color: #393E46;
+}
+*/
+
 :root {
   --primary-desaturated-red: hsl(0, 36%, 70%);
+  --primary-desaturated-red-rgb: 206, 151, 151;
+
   --primary-soft-red: hsl(0, 93%, 68%);
 
   --neutral-dark-grayish-red: hsl(0, 6%, 24%);
