--- a/assets/styles/scss/base/_typography.scss
+++ b/assets/styles/scss/base/_typography.scss
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap');
 
-body {
-  font-family: 'Josefin Sans', sans-serif;
-}
+// font-family: 'Josefin Sans', sans-serif;
+
