--- a/assets/styles/css/styles.css
+++ b/assets/styles/css/styles.css
@@ -330,23 +330,74 @@ template {
 .container {
   font-family: "Josefin Sans", sans-serif;
   min-height: 100vh;
+  background-color: hsl(0deg, 100%, 98%);
   display: grid;
-  grid-template-rows: auto 1fr;
+  grid-template-rows: auto auto 1fr;
   line-height: 0;
 }
+@media (min-width: 640px) {
+  .container {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto 1fr;
+  }
+}
+@media (min-width: 1024px) {
+  .container {
+    grid-template-columns: 1fr auto;
+    grid-template-rows: auto 1fr;
+  }
+}
 
+.header {
+  background-color: white;
+  padding: 2rem;
+  max-width: calc(640px - 4rem);
+}
 .header__logo {
-  margin: 2rem;
   height: 1.3rem;
 }
-.header__img {
+@media (min-width: 640px) {
+  .header {
+    grid-row: 1/span 1;
+    grid-column: 1/span 2;
+  }
+}
+@media (min-width: 1024px) {
+  .header {
+    background-color: transparent;
+    grid-row: 1/span 1;
+    grid-column: 1/span 1;
+    width: 100%;
+    padding-top: 5rem;
+    justify-self: center;
+  }
+  .header__logo {
+    height: 2.3rem;
+  }
+}
+
+.img img {
   width: 100%;
+  height: 100%;
+}
+@media (min-width: 640px) {
+  .img {
+    grid-row: 2/span 1;
+    grid-column: 2/span 1;
+    align-self: stretch;
+  }
+}
+@media (min-width: 1024px) {
+  .img {
+    grid-row: 1/span 2;
+    grid-column: 2/span 1;
+  }
 }
 
 .main {
-  background-color: hsl(0deg, 100%, 98%);
   text-align: center;
   padding: 4rem 0;
+  max-width: calc(640px - 4rem);
 }
 .main__title {
   font-size: 2.5em;
@@ -395,6 +446,32 @@ template {
   display: inline-flex;
   justify-content: center;
   align-items: center;
+}
+@media (min-width: 768px) {
+  .main {
+    justify-self: center;
+    align-self: center;
+  }
+}
+@media (min-width: 1024px) {
+  .main {
+    text-align: left;
+  }
+  .main__title {
+    font-size: 5em;
+  }
+  .main__text {
+    font-size: 1.2em;
+  }
+  .main__form input {
+    padding: 1.3rem 2rem;
+    font-size: 1.2em;
+  }
+  .main__form button {
+    width: 6.5rem;
+    top: 0;
+    right: -1rem;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
