--- a/assets/styles/scss/components/_header.scss
+++ b/assets/styles/scss/components/_header.scss
@@ -1,10 +1,28 @@
+@import '../abstract/media-queries';
 .header {
+  background-color: white;
+  padding: 2rem;
+  max-width: calc($sm - 4rem);
   
   &__logo {
-    margin: 2rem;
     height: 1.3rem;
   }
-  &__img {
+  
+  @include media-query($sm-screen){
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 2;
+  }
+  
+  @include media-query($lg-screen){
+    background-color: transparent;
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 1;
     width: 100%;
+    padding-top: 5rem;
+    justify-self: center;  
+    
+    &__logo {
+      height: 2.3rem;
+    }
   }
 }
